# tf-plan-format

./: .editorconfig  .gitignore  Cargo.toml  README.md  Taskfile.yaml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/actions/setup_environment/: action.yaml
.github/workflows/: check-pr.yaml  release-pr-cleanup.yaml  release-pr.yaml
.shims/: README.md  Taskfile.yaml
src/: cli.rs  lib.rs  main.rs  tf.rs  types.rs
src/template/: mod.rs  tera.rs
src/utils/: cli.rs  test.rs
tests/: utils.rs
tests/cli/: custom.rs  github.rs  main.rs  mod.rs  none.rs
tests/data/plans/: .gitignore  Taskfile.yaml
tests/data/plans/artificial/: full.json  invalid.json  no-resource-changes.json
tests/data/plans/create/: terraform.tfplan.json
tests/data/plans/delete/: terraform.tfplan.json
tests/data/plans/delete-create/: terraform.tfplan.json
tests/data/plans/no-op/: terraform.tfplan.json
tests/data/plans/no-resources/: terraform.tfplan.json
tests/data/plans/no-resources/initial/: main.tf
tests/data/plans/none/: terraform.tfplan.json
tests/data/plans/none/initial/: main.tf
tests/data/plans/sensitive/: terraform.tfplan.json
tests/data/plans/sensitive/initial/: main.tf
tests/data/plans/update/: terraform.tfplan.json
tests/data/plans/update/initial/: main.tf
tests/data/renders/tera/: custom.md  github_markdown  github_markdown.md
tests/data/tera/renders/github_markdown/: default.md  (+1 more)
tests/data/tera/templates/: custom
tests/test_plans/: Taskfile.yaml
tests/test_plans/add/: terraform.tfplan.json
